--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
                             <a href="./src/pagea.HTML">pagea</a>
                         </div>
                         <div>
-                            <a href="./src/pageb.HTML">pagea</a>
+                            <a href="./src/pageb.HTML">pageb</a>
                         </div>  <div>
-                            <a href="./src/pagec.HTML">pagea</a>
+                            <a href="./src/pagec.HTML">pagec</a>
                         </div>  
                         <div>
-                            <a href="./src/paged.HTML">pagea</a>
+                            <a href="./src/paged.HTML">paged</a>
                         </div>  
                         <div>
-                            <a href="./src/pagee.HTML">pagea</a>
+                            <a href="./src/pagee.HTML">pagee</a>
                         </div> 
                          <div>
-                            <a href="./src/pagef.HTML">pagea</a>
+                            <a href="./src/pagef.HTML">pagef</a>
                         </div>  <div>
-                            <a href="./src/pageg.HTML">pagea</a>
+                            <a href="./src/pageg.HTML">pageg</a>
                         </div>  <div>
-                            <a href="./src/pageh.HTML">pagea</a>
+                            <a href="./src/pageh.HTML">pageh</a>
                         </div>  <div>
-                            <a href="./src/pagei.HTML">pagea</a>
+                            <a href="./src/pagei.HTML">pagei</a>
                         </div>  <div>
-                            <a href="./src/pageTribute.HTML">pagea</a>
+                            <a href="./src/pageTribute.HTML">pagetribute</a>
                         </div>  <div>
-                            <a href="./src/pagesurvey.HTML">pagea</a>
+                            <a href="./src/pagesurvey.HTML">pagesurvey</a>
                         </div>
                     </td>
                 </tr>
