--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         </div>  <div>
                             <a href="./src/pagei.HTML">pagei</a>
                         </div>  <div>
-                            <a href="./src/pageTribute.HTML">Tribute</a>
+                            <a href="./src/Tribute.html">Tribute</a>
                         </div>  <div>
-                            <a href="./src/pagesurvey.HTML">survey</a>
+                            <a href="./src/survey.html">survey</a>
                         </div>
                     </td>
                 </tr>
