--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                 <tr>
                     <td>
                         <div>
+                            <a href="./src/a.HTML">a</a>
+                        </div>
+                        <div>
                             <a href="./src/pagea.HTML">pagea</a>
                         </div>
                         <div>
-                            <a href="./src/pageb.HTML">pageb</a>
+                            <a href="./src/login.html">login</a>
                         </div>  <div>
                             <a href="./src/pagec.HTML">pagec</a>
                         </div>  
