--- a/index.html
+++ b/index.html
@@ -24,29 +24,24 @@
                     <td>
                         <div>
                             <a href="./src/a.HTML">a</a>
-                        </div>
-                        <div>
-                            <a href="./src/pagea.HTML">pagea</a>
-                        </div>
-                        <div>
+                        </div> <div>
+                            <a href="./src/pagea.html">pagea</a>
+                        </div><div>
                             <a href="./src/login.html">login</a>
+                        </div> <div>
+                            <a href="./src/pagec.html">pagec</a>
                         </div>  <div>
-                            <a href="./src/pagec.HTML">pagec</a>
-                        </div>  
-                        <div>
-                            <a href="./src/paged.HTML">paged</a>
-                        </div>  
-                        <div>
-                            <a href="./src/pagee.HTML">pagee</a>
-                        </div> 
-                         <div>
-                            <a href="./src/pagef.HTML">pagef</a>
+                            <a href="./src/paged.html">paged</a>
+                        </div> <div>
+                            <a href="./src/pagee.html">pagee</a>
+                        </div> <div>
+                            <a href="./src/pagef.html">pagef</a>
                         </div>  <div>
-                            <a href="./src/pageg.HTML">pageg</a>
+                            <a href="./src/pageg.html">pageg</a>
                         </div>  <div>
-                            <a href="./src/pageh.HTML">pageh</a>
+                            <a href="./src/pageh.html">pageh</a>
                         </div>  <div>
-                            <a href="./src/pagei.HTML">pagei</a>
+                            <a href="./src/pagei.html">pagei</a>
                         </div>  <div>
                             <a href="./src/Tribute.html">Tribute</a>
                         </div>  <div>
