--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <tr>
                     <td>
                         <div>
-                            <a href="./src/a.HTML">a</a>
+                            <a href="./src/a.html">a</a>
                         </div> <div>
                             <a href="./src/pagea.html">pagea</a>
                         </div><div>
