--- a/src/linkb_parent.html
+++ b/src/linkb_parent.html
@@ -14,7 +14,7 @@
         </p>    
     </div>
     <div>
-        <a ref="nooperner noreferrer" href="../images/sanj.jpg" downlode="sanj">sanj</a>
+        <a rel="nooperner noreferrer" href="../images/sanj.jpg" downlode="sanj">sanj</a>
     </div>
     
 </body>
