--- a/index.html
+++ b/index.html
@@ -46,7 +46,24 @@
                             <a href="./src/Tribute.html">Tribute</a>
                         </div>  <div>
                             <a href="./src/survey.html">survey</a>
-                        </div>
+                        </div> <div>
+                            <a href="./src/anchor.html">survey</a>
+                        </div>  <div>
+                            <a href="./src/child-frame.html">survey</a>
+                        </div>  
+                            <a href="./src/grand-child-frame.html">survey</a>
+                       </div>  <div>
+                            <a href="./src/input type 3.html">survey</a>
+                       </div>  <div>
+                            <a href="./src/input type2.html">survey</a>
+                        </div>  <div>
+                            <a href="./src/Input Types.html">survey</a>
+                        </div>  <div>
+                            <a href="./src/link_a_target.html">survey</a>
+                        </div>  <div>
+                            <a href="./src/linkb_parent.html">survey</a>
+                        </div>  
+                        
                     </td>
                 </tr>
 
