--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
                         </div>  <div>
                             <a href="./src/survey.html">survey</a>
                         </div> <div>
-                            <a href="./src/anchor.html">survey</a>
+                            <a href="./src/anchor.html">anchor</a>
                         </div>  <div>
-                            <a href="./src/child-frame.html">survey</a>
-                        </div>  
-                            <a href="./src/grand-child-frame.html">survey</a>
+                            <a href="./src/child-frame.html">child-frame</a>
+                        </div> <div>
+                            <a href="./src/grand-child-frame.html">grand-child-frame</a>
                        </div>  <div>
-                            <a href="./src/input type 3.html">survey</a>
+                            <a href="./src/input type 3.html">input type3/a>
                        </div>  <div>
-                            <a href="./src/input type2.html">survey</a>
+                            <a href="./src/input type2.html">sinput type2</a>
                         </div>  <div>
-                            <a href="./src/Input Types.html">survey</a>
+                            <a href="./src/Input Types.html">input Types</a>
                         </div>  <div>
-                            <a href="./src/link_a_target.html">survey</a>
+                            <a href="./src/link_a_target.html">link_a_target</a>
                         </div>  <div>
-                            <a href="./src/linkb_parent.html">survey</a>
+                            <a href="./src/linkb_parent.html">linkb_parent</a>
                         </div>  
                         
                     </td>
