--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                         </div>  <div>
                             <a href="./src/linkb_parent.html">linkb_parent</a>
                         </div>  
+                        <div>
+                            <a href="./src/input type4.html">input type4</a>
+                        </div>  <div>
+                            <a href="./src/input type5.html">input type5</a>
+                        </div>  
                         
                     </td>
                 </tr>
