--- a/src/Input Types.html
+++ b/src/Input Types.html
@@ -99,7 +99,7 @@
                 <div>
                     <input type="submit" value="log in">
                 <input type="reset" value="reset"/>
-                <input type="image" alt="close" name="Close" width="25" height="25" src="../images/download.jpg">
+                <input type="image" alt="close" name="Close" width="50" height="50" src="../images/sanj.jpg">
             </div>
 
             </form>
