--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         </div>  <div>
                             <a href="./src/input type5.html">input type5</a>
                         </div>  
+                        <div>
+                            <a href="./src/productpage.html">input type5</a>
+                        </div>  
                         
                     </td>
                 </tr>
