--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <a href="./src/input type5.html">input type5</a>
                         </div>  
                         <div>
-                            <a href="./src/productpage.html">input type5</a>
+                            <a href="./src/productpage.html">productpage</a>
                         </div>  
                         
                     </td>
