--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                         <div>
                             <a href="./src/Adidas boots.html">adidas boots</a>
                         </div>  
+                        <div>
+                            <a href="./src/csslessons.html/">csslessons</a>
+                        </div>  
                         
                     </td>
                 </tr>
