--- a/src/Adidas boots.html
+++ b/src/Adidas boots.html
@@ -17,7 +17,7 @@
         html 
         {
           font-size: 10px; 
-          background: #070707; 
+          background: #050505; 
           color:#fff;
         }  
         
@@ -25,7 +25,7 @@
        {
           display: flex;
           justify-content: space-evenly; 
-          align-items: center;
+          align-items: top;
           flex-direction: row;
           height: 100px;
        }
@@ -120,7 +120,7 @@
    </style>
    </head>
    <body>
-    <header class="container">
+    <header><div class="container">
           <nav>
         <img alt="Adidas" src="../images/Adidas.jpg"hight="125" width="125" >
     <ul>
@@ -131,6 +131,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       </nav>
+      </div>
       </header>
             <div class="header_main">
                 <div class="header_main_content">
@@ -178,6 +179,6 @@
               </ul>
 
                 </div>
-
+                </div>
 </body>
 </html>
