--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                             <a href="./src/csslessons.html/selectorbyname.html">selectorbname</a>
                         </div> 
                         <div>
-                            <a href="./src//QRcode.html">QRcode</a>
+                            <a href="./src/qr-code-component-main/QR code.css">QRcode</a>
                         </div> 
                         <div>
-                            <a href="./src/QRcode.css">selectorbname</a>
+                            <a href="./src/qr-code-component-main/QR code.html">selectorbname</a>
                         </div> 
                         
                         
