--- a/src/qr-code-component-main/QR code.html
+++ b/src/qr-code-component-main/QR code.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="QR code.css" />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
