--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
                         </div>  <div>
                             <a href="./src/order-summary-component-main/order-summary-component-main/Order-summary.css">Order-summary css</a>
                         </div> 
+                        <div>
+                            <a href="./src/testimonials-grid-section-main/Tm-grid.css">Tm-grid css</a>
+                        </div> 
+                        <div>
+                            <a href="./src/testimonials-grid-section-main/Tm-grid.html">Tm-grid html</a>
+                        </div> 
+
 
                         
                         
