--- a/src/qr-code-component-main/QR code.html
+++ b/src/qr-code-component-main/QR code.html
@@ -26,7 +26,7 @@
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://tsbsankara.netlify.app">sanjeev</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://tsbsankara.netlify.app">Savitha</a>.
     </div>
   </body>
 </html>
