--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                         <div>
                             <a href="./src/testimonials-grid-section-main/Tm-grid.html">Tm-grid html</a>
                         </div> 
+                        <div>
+                            <a href="./src/profile-card-component-main/profile-card.css">profile css</a>
+                        </div> 
+                        <div>
+                            <a href="./src/profile-card-component-main/profile-card.html">profile html</a>
+                        </div> 
 
 
                         
