--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
                         <div>
                             <a href="./src/profile-card-component-main/profile-card.html">profile html</a>
                         </div> 
+                        <div>
+                            <a href="./src/fylo-data-storage-component-master/fylo.html">fylo html</a>
+                        </div> 
+                        <div>
+                            <a href="./src/fylo-data-storage-component-master/fylo.css">fylo css</a>
+                        </div> 
 
 
                         
