--- a/index.html
+++ b/index.html
@@ -173,6 +173,25 @@
                         <div>
                             <a href="./src/fylo-data-storage-component-master/fylo.css">fylo css</a>
                         </div> 
+                        <div>
+                            <a href="/src/3-column-preview-card-component-main/3-column-preview.html">3-column-preview css</a>
+                        </div> 
+                        <div>
+                            <a href="./src/3-column-preview-card-component-main/3-column-preview.css">3-column-preview css</a>
+                        </div> 
+                        <div>
+                            <a href="./src/nft-preview-card-component-main/NFT.html">nft css</a>
+                        </div> 
+                        <div>
+                            <a href="./src/nft-preview-card-component-main/NFT.css">nft css</a>
+                        </div> 
+                        <div>
+                            <a href="./src/stats-preview-card-component-main/sts-card.html">status-preview html</a>
+                        </div> 
+                        <div>
+                            <a href="./src/stats-preview-card-component-main/sts-card.css">status-preview css</a>
+                        </div> 
+
 
 
                         
