--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
                             <a href="./src/fylo-data-storage-component-master/fylo.css">fylo css</a>
                         </div> 
                         <div>
-                            <a href="/src/3-column-preview-card-component-main/3-column-preview.html">3-column-preview css</a>
+                            <a href="./src/3-column-preview-card-component-main/3-column-preview.html">3-column-preview  html</a>
                         </div> 
                         <div>
                             <a href="./src/3-column-preview-card-component-main/3-column-preview.css">3-column-preview css</a>
                         </div> 
                         <div>
-                            <a href="./src/nft-preview-card-component-main/NFT.html">nft css</a>
+                            <a href="./src/nft-preview-card-component-main/NFT.html">nft html</a>
                         </div> 
                         <div>
                             <a href="./src/nft-preview-card-component-main/NFT.css">nft css</a>
