--- a/index.html
+++ b/index.html
@@ -191,6 +191,18 @@
                         <div>
                             <a href="./src/stats-preview-card-component-main/sts-card.css">status-preview css</a>
                         </div> 
+                        <div>
+                            <a href="./src/clipboard-landing-page-master/clipboard.html">clipboard.html</a>
+                        </div>  
+                         <div>
+                            <a href="./src/clipboard-landing-page-master/clipboard.css">clipboard css</a>
+                        </div>   
+                        <div>
+                            <a href="./src/four-card-feature-section-master/four-card.html">four-card html</a>
+                        </div>   
+                        <div>
+                            <a href="./src/four-card-feature-section-master/four-card.css">four-card css</a>
+                        </div> 
 
 
 
