--- a/src/nft-preview-card-component-main/NFT.html
+++ b/src/nft-preview-card-component-main/NFT.html
@@ -6,18 +6,17 @@
     <link rel="stylesheet" href="NFT.css">
     <title>Frontend Mentor | NFT preview card component</title>
 
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <article class="main-image">
+      <div class="main-image">
         <img src="images/image-equilibrium.jpg" alt="" />
         <div>
           <img src="./images/icon-view.svg" alt="" />
         </div>
-      </article>
+      </div>
 
-      <article>
+      <div>
         <h2>Equilibrium #3429</h2>
         <p>Our Equilibrium collection promotes balance and calm.</p>
 
@@ -25,12 +24,13 @@
           <li><img src="./images/icon-ethereum.svg" alt="" /> 0.041 ETH</li>
           <li><img src="./images/icon-clock.svg" alt="" /> 3 days left</li>
         </ul>
-      </article>
+      </div>
 
-      <article class="avatar">
+      <div class="avatar">
         <img src="./images/image-avatar.png" alt="" />
         <p>Creation of <span>Jules Wyvern</span></p>
-      </article>
+    <link rel="stylesheet" href="styles.css" />
+      </div>
     </div>
 
 
