--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="table-cell">
                 <p>CSS Lessons & Projects</p>
             </div> <div class="table-cell last-cell" >
-                <p> Java Script</p>
+                <p> Java Script Projects</p>
             </div>
     </div>
     <div class="table-row">
@@ -30,7 +30,7 @@
             <a href="./src/csslessons.html/animation.css">animation css</a>
             <div> <a href="./src/csslessons.html/animation.html">animation html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="src/tip-calculator-app-main/tip calculator.html">tip calculator html</a>
         </div>
     </div>
     <div class="table-row">
@@ -41,7 +41,7 @@
             <a href="./src/csslessons.html/background.css">background css</a>
             <div>  <a href="./src/csslessons.html/animation.css">background html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="src/tip-calculator-app-main/tip calculator.css">tip calculator css</a>
         </div>
     </div>
     <div class="table-row">
@@ -52,7 +52,7 @@
             <a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a>
             <div><a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a></div>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="src/tip-calculator-app-main/tip calculator.js">tip calculator js</a>
         </div>
     </div>
     <div class="table-row">
