--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index2</title>
+    <title>INDEX</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
             <a href="./src/csslessons.html/animation.css">animation css</a>
             <div> <a href="./src/csslessons.html/animation.html">animation html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href="src/tip-calculator-app-main/tip calculator.html">tip calculator html</a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.html">tip calculator html</a>
         </div>
     </div>
     <div class="table-row">
@@ -41,7 +41,7 @@
             <a href="./src/csslessons.html/background.css">background css</a>
             <div>  <a href="./src/csslessons.html/animation.css">background html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href="src/tip-calculator-app-main/tip calculator.css">tip calculator css</a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.css">tip calculator css</a>
         </div>
     </div>
     <div class="table-row">
@@ -52,7 +52,7 @@
             <a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a>
             <div><a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a></div>
         </div> <div class="table-cell last-cell">
-            <a href="src/tip-calculator-app-main/tip calculator.js">tip calculator js</a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.js">tip calculator js</a>
         </div>
     </div>
     <div class="table-row">
@@ -335,8 +335,7 @@
             <a href=""></a>
         </div>
     </div>
-
-    </div>
+   </div>
     
 </body>
 </html>
