--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href=""></a>
+            <a href="./src/about-me.html">about-me.html</a>
+            <div><a href="./src/about-me.css">about-me css</a>
         </div>
         <div class="table-cell">
             <a href="./src/single-price-grid-component-master/single-price.html">single-price html</a>
@@ -325,7 +326,9 @@
         </div>
     </div><div class="table-row">
         <div class="table-cell">
-            <a href=""></a>
+            <a href="./src/selflandin.css">selfpage css</a>
+            <div><a href="./src/selflanding.html">selfpage html</a>
+
         </div>
         <div class="table-cell">
             <a href="./src/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
@@ -338,4 +341,4 @@
    </div>
     
 </body>
-</html>
+</html
