--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href=""></a>
+            <a href="./src/about-me.html">about-me.html</a>
         </div>
         <div class="table-cell">
             <a href="./src/social-proof-section-master/social-proof.html">social-proof html</a>
@@ -314,22 +314,20 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="./src/about-me.html">about-me.html</a>
-            <div><a href="./src/about-me.css">about-me css</a>
+            <a href="./src/about-me.css">about-me css</a>
         </div>
         <div class="table-cell">
             <a href="./src/single-price-grid-component-master/single-price.html">single-price html</a>
-            <div><a href="./src/single-price-grid-component-master/single-price.css">single-price css</a>
-            </div>
+            <div><a href="./src/single-price-grid-component-master/single-price.css">single-price css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
-    </div><div class="table-row">
+    </div>
+    <div class="table-row">
         <div class="table-cell">
             <a href="./src/selflandin.css">selfpage css</a>
-            <div><a href="./src/selflanding.html">selfpage html</a>
-
-        </div>
+            <div><a href="./src/selflanding.html">selfpage html</a></div>
+            </div>
         <div class="table-cell">
             <a href="./src/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
             <div><a href="./src/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.css">huddle-page css</a>
