--- a/src/selflanding.html
+++ b/src/selflanding.html
@@ -14,8 +14,8 @@
             <img src=".././images/css.png" class="logo">
             <img src=".././images/java.png" class="logo">
             <ul>
-                <li>  <a href="file:///D:/HTMLRepo/src/about-me.html">ABOUT-ME</a></li>
-                <li>  <a href="file:///D:/HTMLRepo/index.html">INDEX</a></li>
+                <li>  <a href="https://html-lessons-mu.vercel.app/src/about-me.html">ABOUT-ME</a></li>
+                <li>  <a href="https://html-lessons-mu.vercel.app/">INDEX</a></li>
             </ul>
         </div>
         <div class="head">
