--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
             </div>
             <div class="table-cell">
                 <p>CSS Lessons & Projects</p>
-            </div> <div class="table-cell last-cell" >
+            </div> 
+            <div class="table-cell last-cell" >
                 <p> Java Script Projects</p>
             </div>
-    </div>
-    <div class="table-row">
+        </div>
+     <div class="table-row">
         <div class="table-cell">
             <a href="./src/a.html">a</a>
         </div>
@@ -335,7 +336,19 @@
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
-    </div>
+        </div>
+         <div class="table-row">
+            <div class="table-cell">
+                <a href=""></a>
+                </div>
+            <div class="table-cell">
+                <a href="./src/chat-app-css-illustration-master/chat app.css">chat app css</a>
+                <div><a href="./src/chat-app-css-illustration-master/chat app.html">chat app html </a>
+                </div>
+             </div> <div class="table-cell last-cell">
+                <a href=""></a>
+            </div>
+    </div> 
    </div>
     
 </body>
