--- a/src/chat-app-css-illustration-master/chat app.html
+++ b/src/chat-app-css-illustration-master/chat app.html
@@ -14,7 +14,7 @@
     <div class="phone">
       <div class="phone-header">
         <div class="phone-header-camera"></div>
-        <div class="phone-header-description">
+        Ā<div class="phone-header-description">
           <div class="phone-header-left">
             <i class="uil uil-angle-left"></i>
             <img src="images/avatar.jpg" alt="" />
