--- a/src/fylo-data-storage-component-master/fylo.html
+++ b/src/fylo-data-storage-component-master/fylo.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
   <link rel="stylesheet" href="fylo.css">
-  
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <title> Fylo data storage component</title>
 </head>
 <body>
     <div class="container">
