--- a/src/huddle-landing-page-with-single-introductory-section-master/Huddle single.html
+++ b/src/huddle-landing-page-with-single-introductory-section-master/Huddle single.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>huddle single</title>
   <link rel="stylesheet" href="Huddle single.css">
+  <link ret="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
   <div class="container">
     <div class="wrapper">
       <div class="header">
-        <img src="./images/logo.svg" alt="" srcset="">
+        <img src="https://digitshack.com/codepen/mentor7/logo.svg" alt="" srcset="">
       </div>
       <div class="main">
-        <div class="hero-img"><img src="./images/illustration-mockups.svg" alt=""></div>
+        <div class="hero-img"><img src="https://digitshack.com/codepen/mentor7/illustration-mockups.svg" alt=""></div>
         <div class="hero-text">
           <h1>Build The Community Your Fans Will Love</h1>
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
@@ -24,7 +25,7 @@
       </div>
       <div class="social">
         <a href="#">
-          <i class=""></i>
+          <i class="fab fa-facebook-f"></i>
         </a>
         <a href="#">
           <i class="fab fa-twitter"></i>
