--- a/challenges/chat-app-css-illustration-master/chat app.html
+++ b/challenges/chat-app-css-illustration-master/chat app.html
@@ -7,14 +7,13 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link rel="stylesheet" href="./Themes/chat app.css" />
+    <link rel="stylesheet" href="./themes/chat app.css" />
     <title>chat app</title>
   </head>
   <body>
     <div class="phone">
       <div class="phone-header">
         <div class="phone-header-camera"></div>
-        Ā
         <div class="phone-header-description">
           <div class="phone-header-left">
             <i class="uil uil-angle-left"></i>
