--- a/challenges/four-card-feature-section-master/four-card.html
+++ b/challenges/four-card-feature-section-master/four-card.html
@@ -10,7 +10,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="./Themes/four-card.css" />
+    <link rel="stylesheet" href="./themes/four-card.css" />
     <title>Four card feature section</title>
   </head>
   <body>
