--- a/challenges/testimonials-grid-section-main/Tm-grid.html
+++ b/challenges/testimonials-grid-section-main/Tm-grid.html
@@ -9,24 +9,26 @@
 <div class="container">
     <div class="cards violet">
          <img src="images/bg-pattern-quotation.svg" class="quotes"/>
-       <div class="image">
+      <div class="image">
          <div>
            <img src="./images/image-daniel.jpg">
          </div>
-       <div>
+      <div>
           <h3>Daniel Clifford</h3>
           <small> Verified Graduate</small>
       </div>
-    </div>
+      </div>
       <h4>I received a job offer mid-course, and the subjects I learned were current, 
           if not more so,  in the company I joined. 
-          I honestly feel I got every penny's worth.</h4>
+          I honestly feel I got every penny's worth.
+      </h4>
 
     <p> “ I was an EMT for many years before I joined the bootcamp. I've been looking to make a 
       transition and have heard some people who had an amazing experience here. I signed up 
       for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
       The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-      the course, I've successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
+      the course, I've successfully switched careers, working as a Software Engineer at a VR startup. ”
+    </p>
     </div>
 
     <div class="cards grey">
@@ -38,14 +40,14 @@
         <h3>Jonathan Walters</h3>
         <small> Verified Graduate</small>
      </div>
-   </div>
+     </div>
     <h4> The team was very supportive and kept me motivated</h4>
-
   <p>
     “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-    for a big company. This was one of the best investments I've made in myself. ”</p>
+    for a big company. This was one of the best investments I've made in myself. ”
+  </p>
     </div>
-  <div class="cards white ">
+    <div class="cards white ">
     <div class="image">
       <div>
         <img src="images/image-jeanette.jpg">
@@ -60,8 +62,8 @@
  <p>
   “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
   while doing something I love. ”</p>
-  </div>
- <div class="cards black">
+    </div>
+    <div class="cards black">
   <div class="image">
     <div>
       <img src="images/image-patrick.jpg">
@@ -80,7 +82,7 @@
   gave me the confidence necessary to be able to go out in the world and present myself as a capable 
   junior developer. The standard is above the rest. You will get the personal attention you need from 
   an incredible community of smart and amazing people. ”</p>
- </div>
+    </div>
 
 <div class="cards white last">
   <div class="image">
