--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX</title>
-    <link rel="stylesheet" href="./Themes/index.css">
+    <link rel="stylesheet" href="./themes/index.css">
 </head>
 <body>
     <div class="main">
@@ -205,7 +205,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/order-summary-component-main/order-summary.html">Order-summary html</a>
-            <div><a href="./challenges/order-summary-component-main/Themes/Order-summary.css">Order-summary css</a></div>
+            <div><a href="./challenges/order-summary-component-main/themes/Order-summary.css">Order-summary css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -226,7 +226,7 @@
             <a href="./src/linkb_parent.html">linkb_parent</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/profile-card-component-main/Themes/profile-card.css">profile css</a>
+            <a href="./challenges/profile-card-component-main/themes/profile-card.css">profile css</a>
             <div> <a href="./challenges/profile-card-component-main/profile-card.html">profile html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -238,7 +238,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/fylo-data-storage-component-master/fylo.html">fylo html</a>
-            <div><a href="./challenges/fylo-data-storage-component-master/Themes/fylo.css">fylo css</a>
+            <div><a href="./challenges/fylo-data-storage-component-master/themes/fylo.css">fylo css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -250,7 +250,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/3-column-preview-card-component-main/3-column-preview.html">3-column-preview  html</a>
-            <div><a href="./challenges/3-column-preview-card-component-main/Themes/3-column-preview.css">3-column-preview css</a></div>
+            <div><a href="./challenges/3-column-preview-card-component-main/themes/3-column-preview.css">3-column-preview css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -261,7 +261,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/nft-preview-card-component-main/NFT.html">nft html</a>
-            <div>  <a href="./challenges/nft-preview-card-component-main/Themes/NFT.css">nft css</a></div> 
+            <div>  <a href="./challenges/nft-preview-card-component-main/themes/NFT.css">nft css</a></div> 
             </div><div class="table-cell last-cell">
                 <a href=""></a>
         </div>
@@ -272,7 +272,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/stats-preview-card-component-main/sts-card.html">status-preview html</a>
-            <div><a href="./challenges/stats-preview-card-component-main/Themes/sts-card.css">status-preview css</a>
+            <div><a href="./challenges/stats-preview-card-component-main/themes/sts-card.css">status-preview css</a>
             </div> 
             </div><div class="table-cell last-cell">
                 <a href=""></a>
@@ -284,7 +284,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/clipboard-landing-page-master/clipboard.html">clipboard.html</a>
-            <div> <a href="./challenges/clipboard-landing-page-master/Themes/clipboard.css">clipboard css</a>
+            <div> <a href="./challenges/clipboard-landing-page-master/themes/clipboard.css">clipboard css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -296,7 +296,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/four-card-feature-section-master/four-card.html">four-card html</a>
-            <div><a href="./challenges/four-card-feature-section-master/Themes/four-card.css">four-card css</a>
+            <div><a href="./challenges/four-card-feature-section-master/themes/four-card.css">four-card css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -308,7 +308,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/social-proof-section-master/social-proof.html">social-proof html</a>
-            <div><a href="./challenges/social-proof-section-master/Themes/social-proof.css">social-proof css</a></div>
+            <div><a href="./challenges/social-proof-section-master/themes/social-proof.css">social-proof css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -319,7 +319,7 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/single-price-grid-component-master/single-price.html">single-price html</a>
-            <div><a href="./challenges/single-price-grid-component-master/Themes/single-price.css">single-price css</a></div>
+            <div><a href="./challenges/single-price-grid-component-master/themes/single-price.css">single-price css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -331,7 +331,7 @@
             </div>
         <div class="table-cell">
             <a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
-            <div><a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/Themes/huddle block.css">huddle-page css</a>
+            <div><a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/themes/huddle block.css">huddle-page css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -342,7 +342,7 @@
                 <a href=""></a>
                 </div>
             <div class="table-cell">
-                <a href="./challenges/chat-app-css-illustration-master/Themes/chat app.css">chat app css</a>
+                <a href="./challenges/chat-app-css-illustration-master/themes/chat app.css">chat app css</a>
                 <div><a href="./challenges/chat-app-css-illustration-master/chat app.html">chat app html </a>
                 </div>
              </div> <div class="table-cell last-cell">
@@ -354,7 +354,7 @@
             <a href=""></a>
             </div>
         <div class="table-cell">
-            <a href="./challenges/huddle-landing-page-with-single-introductory-section-master/Themes/Huddle single.css">huddle single css</a>
+            <a href="./challenges/huddle-landing-page-with-single-introductory-section-master/themes/Huddle single.css">huddle single css</a>
             <div><a href="./challenges/huddle-landing-page-with-single-introductory-section-master/Huddle single.html">huddle single html </a>
             </div>
          </div> <div class="table-cell last-cell">
