--- a/challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html
+++ b/challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./Themes/huddle block.css" />
+    <link rel="stylesheet" href="./themes/huddle block.css" />
   </head>
   <body>
     <header>
