--- a/challenges/order-summary-component-main/order-summary.html
+++ b/challenges/order-summary-component-main/order-summary.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Themes/Order-summary.css" />
+    <link rel="stylesheet" href="./themes/Order-summary.css" />
     <title>Order-summary</title>
     <style>
       .attribution {
