--- a/challenges/stats-preview-card-component-main/sts-card.html
+++ b/challenges/stats-preview-card-component-main/sts-card.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./Themes/sts-card.css" />
+    <link rel="stylesheet" href="./themes/sts-card.css" />
 
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
